# vdtjson

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  vdtjson.sln  vdtjson.vcxproj  vdtjson.vcxproj.filters
Samples/JsonTest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  JsonTest.sln  JsonTest.vcxproj  JsonTest.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  main.cpp
Samples/JsonTest/Debug/: JsonTest.ilk
Samples/JsonTest/JsonTest.dir/Debug/JsonTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  JsonTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/vdtjson/: deserializer.h  json.h  number.h  serializer.h  value.h
samples/sandbox/: CMakeLists.txt  main.cpp
source/: json.cpp
src/vdtjson/: data.h  deserializer.h  json.h  number.h  schema.h  serializer.h  value.h
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
